force-app/main/default/objects/Provider__c/fields/Consultation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Fee__c</fullName>
    <label>Consultation Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>