force-app/main/default/objects/Provider__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Providers</relationshipLabel>
    <relationshipName>Providers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>