force-app/main/default/objects/Provider__c/fields/Is_Available_Today__c.field-meta.xml
<CustomField>
    <fullName>Is_Available_Today__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Available Today</label>
    <type>Checkbox</type>
</CustomField>