force-app/main/default/objects/Provider__c/fields/Languages_Spoken__c.field-meta.xml
<CustomField>
    <fullName>Languages_Spoken__c</fullName>
    <label>Languages Spoken</label>
    <length>200</length>
    <type>Text</type>
</CustomField>