force-app/main/default/objects/Provider__c/fields/Provider_Code__c.field-meta.xml
<CustomField>
    <fullName>Provider_Code__c</fullName>
    <label>Provider Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>