force-app/main/default/objects/Provider__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>