force-app/main/default/objects/Provider__c/fields/Symptom_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Symptom_Keywords__c</fullName>
    <label>Symptom Keywords</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>